fix the configuration file for cloudui
Signed-off-by: chenzhen <zhen1.chen@samsung.com>

--- a/incubator/fluentd-cloudwatch/templates/daemonset.yaml
+++ b/incubator/fluentd-cloudwatch/templates/daemonset.yaml
@@ -39,6 +39,8 @@ spec:
           value: {{ .Values.awsRegion }}
         - name: LOG_GROUP_NAME
           value: {{ .Values.logGroupName }}
+        - name: SERVICE_GROUP_NAME
+          value: {{ .Values.ServiceGroupName }}
 {{- if not .Values.awsRole }}
         - name: AWS_ACCESS_KEY_ID
           valueFrom:
